--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -4,18 +4,17 @@ on: [push, pull_request]
 
 jobs:
   lint:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       max-parallel: 10
       matrix:
-        os: [ubuntu-latest]
-        version: ["3.10", "3.11"]
+        python: ["3.10", "3.11"]
     steps:
       - uses: actions/checkout@v3
-      - name: Set up python ${{ matrix.version }}
+      - name: Set up python ${{ matrix.python }}
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.version }}
+          python-version: ${{ matrix.python }}
       - name: Setup dev env
         run: |
           python -m pip install --upgrade pip
