--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,8 +28,8 @@ classifiers = [
 ]
 license = { file = "LICENSE" }
 authors = [
-  {email = { attr = "netbox_config_diff.__email__" }},
-  {name = { attr = "netbox_config_diff.__author__" }}
+  {email = "miaow2@yandex.ru"},
+  {name = "Artem Kotik"}
 ]
 dynamic = [
   "dependencies",
