--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -23,5 +23,5 @@ jobs:
       - name: Publish
         env:
           TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_PASS }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
         run: python -m twine upload dist/*
