--- a/.github/workflows/mkdocs.yaml
+++ b/.github/workflows/mkdocs.yaml
@@ -16,5 +16,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-      - run: python -m pip install -r requirements/docs.txt
+      - run: |
+            python -m pip install --upgrade pip
+            python -m pip install -r requirements/docs.txt
       - run: mkdocs gh-deploy --force
