--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup publish env
         run: |
             python -m pip install --upgrade pip
-            python -m pip install setuptools wheel build twine
+            python -m pip install -r requirements/publish.txt
       - name: Build
         run: python -m build
       - name: Check
