--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ find = {}
 version = { attr = "netbox_config_diff.__version__" }
 dependencies = {file = ["requirements/base.txt"]}
 optional-dependencies.dev = { file = ["requirements/dev.txt"] }
+optional-dependencies.test = { file = ["requirements/test.txt"] }
 
 [tool.black]
 line-length = 120
@@ -67,3 +68,8 @@ select = ["C", "E", "F", "I"]
 ignore = ["C901"]
 line-length = 120
 target-version = "py310"
+
+[tool.pytest.ini_options]
+addopts = "-p no:warnings -vv --no-migrations"
+DJANGO_SETTINGS_MODULE = "netbox.settings"
+pythonpath = ["/opt/netbox/netbox"]
