--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -28,10 +28,15 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        netbox_version: ["v3.5.7"]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Build NetBox
+        with:
+          netbox_version: ${{ matrix.netbox_version }}
         run: cd development && docker compose build
         shell: bash
       - name: Run tests
