--- a/development/docker-compose.yaml
+++ b/development/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
       args:
         NETBOX_VERSION: ${NETBOX_VERSION-develop}
     command: sh -c "python manage.py rqworker"
+    env_file: ./.env
     depends_on:
       - postgres
       - redis
