--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -21,8 +21,8 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install --upgrade setuptools wheel
           python -m pip install -r requirements/dev.txt
-      - name: Run black
-        run: black --check --diff --color .
+      - name: Run ruff format
+        run: ruff format
       - name: Run ruff
         run: ruff .
 
