--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -22,7 +22,7 @@ jobs:
           python -m pip install --upgrade setuptools wheel
           python -m pip install -r requirements/dev.txt
       - name: Run ruff format
-        run: ruff format
+        run: ruff format .
       - name: Run ruff
         run: ruff .
 
