--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       max-parallel: 10
       matrix:
-        python: ["3.10", "3.11"]
+        python: ["3.10", "3.11", "3.12"]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -31,7 +31,7 @@ jobs:
     strategy:
       max-parallel: 10
       matrix:
-        netbox_version: ["v3.5.9", "v3.6.9"]
+        netbox_version: ["v3.5.9", "v3.6.9", "v3.7.5"]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
