Update ruff settings

--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Run ruff format
         run: ruff format .
       - name: Run ruff
-        run: ruff .
+        run: ruff check .
 
   test:
     runs-on: ubuntu-latest
