--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ classifiers = [
   "Programming Language :: Python :: 3 :: Only",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
   "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 license = { file = "LICENSE" }
@@ -53,10 +54,12 @@ optional-dependencies.test = { file = ["requirements/test.txt"] }
 
 [tool.ruff]
 exclude = ["migrations", "__pycache__"]
-select = ["C", "E", "F", "I"]
-ignore = ["C901"]
 line-length = 120
 target-version = "py310"
+
+[tool.ruff.lint]
+select = ["C", "E", "F", "I"]
+ignore = ["C901"]
 
 [tool.pytest.ini_options]
 addopts = "-p no:warnings -vv --no-migrations"
