--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -31,7 +31,7 @@ jobs:
     strategy:
       max-parallel: 10
       matrix:
-        netbox_version: ["v3.6.9", "v3.7.8", "v4.0.7"]
+        netbox_version: ["v3.7.8", "v4.0.7", "4.1.1"]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
