--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -31,7 +31,7 @@ jobs:
     strategy:
       max-parallel: 10
       matrix:
-        netbox_version: ["v4.0.7", "v4.1.11", "4.2.2"]
+        netbox_version: ["v4.0.7", "v4.1.11", "v4.2.2"]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
