--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       max-parallel: 10
       matrix:
-        python: ["3.10", "3.11", "3.12"]
+        python: ["3.12"]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -31,7 +31,7 @@ jobs:
     strategy:
       max-parallel: 10
       matrix:
-        netbox_version: ["v4.2.9", "v4.3.7", "v4.2.2"]
+        netbox_version: ["v4.4.10", "v4.5.2"]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
