--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -31,7 +31,7 @@ jobs:
     strategy:
       max-parallel: 10
       matrix:
-        netbox_version: ["v4.4.10", "v4.5.2"]
+        netbox_version: ["v4.5.2"]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
